--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-glk-api (0.7.5-1) unstable; urgency=low
+glk-headers-dev (0.7.5-1) unstable; urgency=low
 
   * Initial release (Closes: #0).
 
- -- Christoph Ender <christoph.ender@spellbreaker.org>  Tue, 29 Aug 2017 20:45:00 +0200
+ -- Christoph Ender <christoph.ender@spellbreaker.org>  Tue, 29 Aug 2017 21:20:00 +0200
